[package]
name = "execution-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
warp            = "0.3"
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tokio-postgres  = { version = "0.7", features = ["with-uuid"] }
deadpool-postgres = "0.9"
sha2            = "0.10"