[package]
name = "execution-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
warp            = {workspace=true}
tokio           = {workspace=true}
serde           = {workspace=true}
serde_json      = {workspace=true}
deadpool-postgres = {workspace=true}
tokio-postgres = {workspace=true}
sha2            = {workspace=true}
anyhow = {workspace=true}
wasmi = { version = "0.32" }
hex = {workspace=true}
toml = {workspace=true}
bincode = {workspace=true}
base64 = {workspace=true}
reqwest = {workspace=true}
async-trait = {workspace=true}