[package]
name = "inner-onclose-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version="1", features=["full"]}
serde = {version="1.0.218", features=["derive"]}
toml = "0.8.9"
sha2 = "0.10.8"
url = "2"
tokio-tungstenite = "0.16"
futures = "0.3"
serde_json = { version = "1.0" }
tokio-postgres = "0.7.10"
#zephyr = { package = "zephyr-vm", version = "0.2.0" }
zephyr = { package = "zephyr-vm", path = "../../zephyr/rs-zephyr-env/" }
anyhow = "1.0.75"
postgres = { version = "0.19.9", features = ["with-serde_json-1"] }
log = "0.4.20"
stellar-xdr = "22.1.0"
bincode = "1.0"
rs-zephyr-common = {path="../../rs-zephyr-sdk/zephyr-common"}
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
multiuser-logging-service = { path = "../../multiuser-logging-service", default-features = false, features = [
    "storage",
    "sdk",
] }
hex = "0.4.3"
rusqlite = "0.31.0"
base64 = "0.21"

[dependencies.soroban-env-host]
package = "soroban-env-host-zephyr"
#version = "21.2.1"
path = "../../rs-soroban-env/soroban-env-host"
features = ["testutils", "next"]
