[package]
name = "inner-onclose-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version="1", features=["full"]}
serde = {version="1.0.218", features=["derive"]}
toml = "0.8.9"
sha2 = "0.10.8"
url = "2"
tokio-tungstenite = "0.16"
futures = "0.3"
serde_json = { version = "1.0" }
tokio-postgres = "0.7.10"

anyhow = "1.0.75"
postgres = { version = "0.19.9", features = ["with-serde_json-1"] }
log = "0.4.20"
bincode = "1.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
hex = "0.4.3"
base64 = "0.21"
stellar-strkey = "0.0.7"

zephyr = {workspace=true}
stellar-xdr = {workspace=true}
rs-zephyr-common = {workspace=true}
retroshade = { workspace=true }
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
md5 = {workspace=true}

[features]
default = []
mock = []
